* Fix {bz: 1402} by making the global nav as wide as needed, and nowrap it.
git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/trunk@10337 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -30,7 +30,8 @@ div#contentColumns.showbox #contentRight {
 div#header div#globalNav {
     padding: 8px 0px;
     margin: 0px;
-    width: 450px !important;
+    width: auto !important;
+    white-space: nowrap;
 }
 
 div#controls div#controlsRight ul li a.watch.on {
